- the xor constraint handler can now parse its constraints
- the bounddisjunction constraint handler can now parse its constraints
- SCIP-CPX is now threadsafe
- via "PARASCIP=true" as a "Makefile" option it is possible to compile SCIP threadsafe in DEBUG-mode, (in OPT-mode it's not necessary)
- new dual presolving methods in cons_setppc and cons_logicor

SCIP version 2.0.0
===============

interface:
- new method SCIPbranchruleGetNRelaxCalls() to get the total number of times, a particular branching rule was called 
  on a relaxation solutions
- new method SCIPpermuteArray() that randomly shuffles an array using the Fisher-Yates algorithm
- new method SCIPgetRandomSubset() that draws a random subset of disjoint elements from a given set of disjoint elements
- new method SCIPpermuteProb() that randomly permutes constraints and variables
- new method SCIPrestartSolve() that allows the user to manually restart the solving process
- new method SCIPbranchRelax() to branch on a relaxation solution
- new method SCIPbranchVarVal() to branch on an arbitrary value within the variable's bounds
- new method SCIPbranchGetBranchingPoint() and SCIPgetBranchingPoint() to select branching point for a variable,
  e.g., ensure branching point is inside the interval for a continuous variable
- new callback SCIP_DECL_BRANCHEXECRELAX(), together with new parameter in SCIPincludeBranchrule() for branching on a relaxation solution
- added SCIPsortPtrPtrInt (and various other) and corresponding sorting/inserting/deleting methods in pub_misc.h and necessary defines in misc.c
- added to the callback method SCIP_DECL_PROBEXITSOL(x) (type_prob.h) the parameter restart; 
  this parameter is set to TRUE if the exit solve call was triggered by a restart?
- new method SCIPswapPointers()
- new method SCIPexecRelpscostBranching() in branch_relpscost.{c,h}; this method allows of calling the reliability pseudo cost branching algorithm 
  for given set of branching candidates from the outside