@@ -77,6 +77,7 @@ features:
 - SCIP-CPX is now threadsafe
 - via "PARASCIP=true" as a "Makefile" option it is possible to compile SCIP threadsafe in DEBUG-mode, (in OPT-mode it's not necessary)
 - new dual presolving methods in cons_setppc and cons_logicor
+- added dialog "write nlp" to write current NLP relaxation to a file
 
 SCIP version 2.0.0
 ===============
